--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="main">
 	<head>
-		<title>orsys exo</title>
+		<title>orsys exo Ludo</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
