--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 		<script src="../node_modules/angular-route/angular-route.js"></script>
 		<script src="app.js"></script>
 		<script src="ors-route/ors-route.js"></script>
+		<script src="ors-star/ors-star.js"></script>
 	</body>
 </html>
 
