webpack.config.js
faire : npm install webpack -g

voir les différents "import" faits par rapport à la version précédente

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,7 @@
 		<ors-header></ors-header>
         <ors-body></ors-body>
         <ors-footer></ors-footer>
-		<script src="../node_modules/angular/angular.js"></script>
-		<script src="../node_modules/angular-route/angular-route.js"></script>
-		<script src="app.js"></script>
-		<script src="ors-route/ors-route.js"></script>
-		<script src="ors-route/ctrl/product.js"></script>
-		<script src="ors-star/ors-star.js"></script>
+		<script src="../wpk/bundle.js"></script>
 	</body>
 </html>
 
